get5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: get5
  name: g5v
  namespace: get5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: get5
    spec:
      containers:
        - image: monroeshindelar/g5v:latest
          imagePullPolicy: Always
          name: g5v
          ports:
            - name: g5v
              containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: g5api
  name: g5api
  namespace: get5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: g5api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: g5api
    spec:
      containers:
        - image: monroeshindelar/g5api:latest
          imagePullPolicy: Always
          name: g5api
          ports:
            - name: g5api
              containerPort: 3301
